feat: Add function to delete the taks

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -10,3 +10,11 @@
     align-items: center;
     cursor: pointer;
 }
+
+.remove-tas-button {
+    background-color: #444;
+    border: none;
+    font-size: 16px;
+    color: chartreuse;
+    cursor: pointer;
+}
