--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -11,10 +11,11 @@
     cursor: pointer;
 }
 
-.remove-tas-button {
+.remove-tas-button,
+.see-tas-button {
     background-color: #444;
     border: none;
-    font-size: 16px;
+    font-size: 24px;
     color: chartreuse;
     cursor: pointer;
 }
