--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 500px;
-  margin: 30px auto;
+  margin: 30px;
   overflow: auto;
   min-height: 300px;
   border: 2px solid chartreuse;
