--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -20,3 +20,9 @@
     cursor: pointer;
     margin: 0 5px;
 }
+
+.buttons-container {
+    display: flex;
+    justify-content: end;
+    min-width: 10%;
+}
